# cam-ui

./: Cargo.toml
src/: icons.rs  main.rs  ui.rs  video.rs
src/file/: mod.rs
src/video/: record.rs
